--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-@import "./assets/themes";
+@import "./styles/themes";
 
 body {
   margin: 1rem auto;
